# shift-substrate-core

./: Cargo.toml
cli/: Cargo.toml
cli/src/: browser.rs  cli.rs  command.rs  lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: main.rs
