[package]
name = "shiftNrg-cli"
version = "0.1.0"
authors = ["Pactum IO <pact@pactum.io>"]
description = "ShiftNrg Client Node"
edition = "2020"
license = "GPL-3.0"
homepage = "https://shiftnrg.org"
build = "build.rs"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# crates
log = "0.4.8"
futures = { version = "0.3.4", features = ["compat"] }
structopt = "0.3.8"
tokio = { version = "0.2.13", features = ["rt-threaded"], optional = true }
wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }
# substrate
substrate-browser-utils = { package = "substrate-browser-utils", git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }

# shiftNrg
# service = { package = "shiftNrg-service", path = "../service", default-features = false, optional = true }
# service-new = { package = "shiftNrg-service-new", path = "../node/service", default-features = false, optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = [ 
    "wasmtime", 
    "db", 
    "cli", 
]
wasmtime = [ "sc-cli/wasmtime" ]
db = [ "sc-service/db" ]
cli = [
	"tokio",
	"sc-cli",
	"sc-service",
	"frame-benchmarking-cli",
]
browser = [
	"wasm-bindgen",
	"wasm-bindgen-futures",
	"substrate-browser-utils",
	# "service",
]